# Haskell-Fun

warehouse/: LICENSE  README.md  stack.yaml  warehouse.cabal
warehouse/src/: ContainmentRobot.hs  ItemForShipment.hs  Main.hs  Package.hs  Pod.hs  Robot.hs  SuperPod.hs
